Refactor: Code quality improvements and API cleanup
Major improvements to codebase structure and API design:

## Test Suite Cleanup
- Consolidated redundant initialization tests in TestCorpusInit
- Replaced duplicate test_corpus_init_with_credentials() and
  test_corpus_init_stores_credentials() with single parameterized test
- Enhanced test coverage with 3 credential format variations
- Removed redundant test_corpus_simple.py file
- Fixed test compatibility after API signature changes

## API Design Improvements
- Made 'title' required parameter in write_new_note() method
- Reordered parameters: write_new_note(title, body, tags) for better UX
- Removed auto-generation complexity, enforcing explicit titles
- Updated method documentation to reflect required title parameter

## Security Enhancements
- Enhanced .gitignore with comprehensive credential protection
- Added patterns: .env.*, config/credentials.json, **/api_keys.py
- Implements defense-in-depth against accidental secret commits

## Code Quality
- Eliminated DRY violations in test suite
- Improved API ergonomics and developer experience
- Maintained 100% test pass rate (13 passed, 8 skipped)
- Clean codebase ready for Phase 3 (SDK Evaluation)

All tests passing. Project at clean bookmark for SDK integration phase.

--- a/.gitignore
+++ b/.gitignore
@@ -59,10 +59,13 @@ Thumbs.db
 
 # Environment variables and secrets
 .env
+.env.*
 .env.local
 .env.*.local
 *.key
 secrets.txt
+config/credentials.json
+**/api_keys.py
 
 # Evernote API credentials
 evernote_auth.txt
