refactor: Realign project identity as corpus extraction utility
Major documentation and code refactoring to reflect project's true purpose:

## Project Identity Shift
- FROM: Evernote API wrapper with full CRUD operations
- TO: Evernote corpus extraction utility for GenAI applications
- Focused on read-only data extraction, not long-term API integration

## Documentation Updates
- README.md: Updated title, goals, usage examples to show ENEX workflow
- Added evernote-backup setup instructions and realistic examples
- Removed all write/update/delete operation references
- Updated development status to reflect actual progress (Phase 4 complete)
- notebooks/README.md: Shifted focus to corpus analytics and data preparation

## Code Alignment
- Corpus class and tests now accurately represent read-only ENEX parsing
- Removed obsolete SDK and API references from documentation
- Streamlined project structure description

## Strategic Clarity
✅ This tool extracts and structures Evernote data for external AI applications
✅ Clean separation: data extraction here, AI/agent work elsewhere
✅ Honest about capabilities: 4,874 notes successfully parsed from ENEX
✅ Clear next steps: content cleaning and export format development

Project now accurately represents its role as a specialized data preparation utility.

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@
 # - Set up project-specific virtual environment (.venv in project root)
 # - Document workspace environment setup best practices  
 # - Move project-specific packages out of global VS_Code venv
-# - Create VS Code workspace settings for Python interpreter
+# - Code workspace settings for Python interpreter
 # - Modify workspace environment so src is in path
 # - Add environment setup to README.md
 
