feat: implement consistent tags field normalization and fix f-string cleanup
- BREAKING: Normalize tag/tags field inconsistency - tags is now always a list
- Initialize tag as empty list, populate during parsing, rename to tags with pop()
- Fix export_for_rag to use correct tags field instead of legacy tag field
- Clean up f-strings without placeholders (Flake8 F541 violations)
- Update notebooks to work with normalized tags field
- All tag access now guaranteed to be list type for consistent handling

This resolves the DRY violation where duplicate tag/tags data existed
and ensures predictable list-based tag handling throughout the codebase.

--- a/.gitignore
+++ b/.gitignore
@@ -72,6 +72,10 @@ evernote_auth.txt
 dev_token.txt
 api_credentials.json
 
+# Exported note data (contains private content - specific patterns)
+*_export.*
+evernote_rag_export.*
+
 # Logs
 *.log
 logs/
@@ -79,3 +83,8 @@ logs/
 # Temporary files
 tmp/
 temp/
+
+# RAG Export Files (contain private note content - specific patterns only)
+*rag_export*.json
+evernote_export*.json
+notes_export*.json
